[gd_scene load_steps=19 format=1]

[ext_resource path="res://scenes/jogo_goleiro/nivel01.gd" type="Script" id=1]
[ext_resource path="res://images/background/bg_nivel_01.png" type="Texture" id=2]
[ext_resource path="res://themes/listButtons.tres" type="Theme" id=3]
[ext_resource path="res://fonts/FACEBOLF.OTF" type="DynamicFontData" id=4]
[ext_resource path="res://animations/animation_goalkeper/Esqueleto.tscn" type="PackedScene" id=5]
[ext_resource path="res://images/goal_post_lvl01.png" type="Texture" id=6]
[ext_resource path="res://fonts/KOMIKAX_ - neutra2.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://images/Interface/seta_01.png" type="Texture" id=8]
[ext_resource path="res://images/Interface/seta_02.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]

font/size = 18
font/use_mipmaps = true
font/use_filter = true
font/font = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.6, 0.6, 0.6, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="DynamicFont" id=3]

font/size = 18
font/use_mipmaps = true
font/use_filter = true
font/font = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]

font/size = 18
font/use_mipmaps = true
font/use_filter = true
font/font = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=5]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.6, 0.6, 0.6, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="DynamicFont" id=6]

font/size = 18
font/use_mipmaps = true
font/use_filter = true
font/font = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]

font/size = 18
font/use_mipmaps = true
font/use_filter = true
font/font = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]

font/size = 18
font/use_mipmaps = true
font/use_filter = true
font/font = ExtResource( 7 )

[sub_resource type="StyleBoxEmpty" id=9]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[node name="raiz_jogoGoleiro_nl1" type="Node2D"]

script/script = ExtResource( 1 )

[node name="imagem" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1280.0
margin/bottom = 720.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 0

[node name="Label" type="Label" parent="."]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 3 )
margin/left = 538.0
margin/top = 10.0
margin/right = 616.0
margin/bottom = 40.0
text = "Nivel 01"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="b_endGame" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1132.0
margin/top = 657.0
margin/right = 1270.0
margin/bottom = 707.0
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Encerrar jogo"
flat = false

[node name="goalKeeper" parent="." instance=ExtResource( 5 )]

editor/display_folded = true
transform/pos = Vector2( 593.226, 514.059 )
transform/scale = Vector2( 0.09, 0.09 )

[node name="R-Arm" parent="goalKeeper"]

transform/pos = Vector2( 677.369, 1.75439 )
transform/rot = -17.1002
transform/scale = Vector2( 1, 1 )

[node name="R-Forearm" parent="goalKeeper"]

transform/pos = Vector2( 943.316, 219.069 )
transform/rot = 11.7497
transform/scale = Vector2( 1, 1 )

[node name="R-Hand" parent="goalKeeper"]

transform/pos = Vector2( 1282.91, 168.903 )
transform/scale = Vector2( 1, 1 )

[node name="L-Arm" parent="goalKeeper"]

transform/pos = Vector2( 350.996, 10.0962 )
transform/rot = 22.3035
transform/scale = Vector2( 1, 1 )

[node name="L-Forearm" parent="goalKeeper"]

transform/pos = Vector2( 102.055, 252.351 )
transform/scale = Vector2( 1, 1 )

[node name="L-Hand" parent="goalKeeper"]

transform/pos = Vector2( -218.954, 253.707 )
transform/scale = Vector2( 1, 0.999999 )

[node name="L-Thigh" parent="goalKeeper"]

transform/pos = Vector2( 460.875, 387.114 )

[node name="R-Thigh" parent="goalKeeper"]

transform/pos = Vector2( 580.373, 388.056 )
transform/scale = Vector2( 1, 1 )

[node name="R-Leg" parent="goalKeeper"]

transform/pos = Vector2( 922.588, 556.022 )
transform/scale = Vector2( 1, 1 )

[node name="L-Leg" parent="goalKeeper"]

transform/pos = Vector2( 153.787, 622.604 )
transform/scale = Vector2( 1, 1 )

[node name="L-Foot" parent="goalKeeper"]

transform/pos = Vector2( 36.8159, 1032.97 )
transform/scale = Vector2( 1.13398, 1 )

[node name="R-Foot" parent="goalKeeper"]

transform/pos = Vector2( 937.356, 1036.22 )
transform/scale = Vector2( 1.13026, 1 )

[node name="TextureFrame" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 337.0
margin/top = 412.0
margin/right = 943.0
margin/bottom = 639.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 0

[node name="janelaFim" type="Panel" parent="."]

editor/display_folded = true
visibility/visible = false
visibility/opacity = 0.7
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 379.0
margin/top = 216.0
margin/right = 880.0
margin/bottom = 436.0

[node name="b_voltaMenu" type="Button" parent="janelaFim"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 5.0
margin/top = 160.0
margin/right = 250.0
margin/bottom = 210.0
custom_styles/hover = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Voltar menu"
flat = false

[node name="b_sairGame" type="Button" parent="janelaFim"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 75.0
margin/top = 93.0
margin/right = 423.0
margin/bottom = 143.0
custom_styles/hover = SubResource( 2 )
custom_fonts/font = SubResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Sair do Jogo (ESC)"
flat = false

[node name="b_nextLvl" type="Button" parent="janelaFim"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 250.0
margin/top = 160.0
margin/right = 495.0
margin/bottom = 210.0
custom_styles/hover = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Próximo nível"
flat = false

[node name="texto" type="Label" parent="janelaFim"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 170.0
margin/top = 40.0
margin/right = 343.0
margin/bottom = 59.0
custom_fonts/font = SubResource( 7 )
text = "Fim do jogo... bla bla"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="janelaSequencia" type="Panel" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 39.0
margin/top = 80.0
margin/right = 666.0
margin/bottom = 320.0

[node name="texto" type="Label" parent="janelaSequencia"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 9.0
margin/top = 11.0
margin/right = 68.0
margin/bottom = 41.0
custom_fonts/font = SubResource( 8 )
text = "Debug"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="showSequence" type="TextEdit" parent="janelaSequencia"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 15.0
margin/top = 42.0
margin/right = 602.0
margin/bottom = 215.0
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
caret/block_caret = false
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="b_chutes" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 66.0
margin/top = 595.0
margin/right = 337.0
margin/bottom = 696.0
custom_styles/panel = SubResource( 9 )

[node name="b_esquerda" type="TextureButton" parent="b_chutes"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 319.0
margin/top = 31.0
margin/right = 402.0
margin/bottom = 125.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 8 )
params/scale = Vector2( 0.15, 0.15 )

[node name="b_baixo" type="TextureButton" parent="b_chutes"]

rect/rotation = 90.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 533.0
margin/top = 125.0
margin/right = 617.0
margin/bottom = 219.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 8 )
params/scale = Vector2( 0.15, 0.15 )

[node name="b_direita" type="TextureButton" parent="b_chutes"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 747.0
margin/top = 32.0
margin/right = 830.0
margin/bottom = 126.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 9 )
params/scale = Vector2( 0.15, 0.15 )

[node name="JanelaTeste" type="Panel" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1038.0
margin/top = 9.0
margin/right = 1271.0
margin/bottom = 278.0

[node name="title" type="Label" parent="JanelaTeste"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 3 )
margin/left = 10.0
margin/top = 27.0
margin/right = 226.0
margin/bottom = 57.0
text = "Escolha onde chutar"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="l_chute" type="Label" parent="JanelaTeste"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 3 )
margin/left = 131.0
margin/top = 88.0
margin/right = 347.0
margin/bottom = 118.0
text = "-----"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="l_goleiro" type="Label" parent="JanelaTeste"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 3 )
margin/left = 128.0
margin/top = 132.0
margin/right = 344.0
margin/bottom = 162.0
text = "-----"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="l_result" type="Label" parent="JanelaTeste"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 3 )
margin/left = 87.0
margin/top = 187.0
margin/right = 303.0
margin/bottom = 217.0
text = "-------"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="texto_defesa" type="Label" parent="JanelaTeste"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 3 )
margin/left = 12.0
margin/top = 132.0
margin/right = 94.0
margin/bottom = 162.0
text = "Goleiro:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="texto_chute" type="Label" parent="JanelaTeste"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 3 )
margin/left = 12.0
margin/top = 88.0
margin/right = 77.0
margin/bottom = 118.0
text = "Chute:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="janelaPlacar" type="Panel" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1052.0
margin/top = 403.0
margin/right = 1275.0
margin/bottom = 633.0

[node name="title" type="Label" parent="janelaPlacar"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 3 )
margin/left = 134.0
margin/top = 20.0
margin/right = 208.0
margin/bottom = 50.0
text = "Placar"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="texto_gol" type="Label" parent="janelaPlacar"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 3 )
margin/left = 10.0
margin/top = 70.0
margin/right = 160.0
margin/bottom = 100.0
text = "Gols:"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="texto_defesas" type="Label" parent="janelaPlacar"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 3 )
margin/left = 10.0
margin/top = 110.0
margin/right = 160.0
margin/bottom = 140.0
text = "Defesas:"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="texto_total" type="Label" parent="janelaPlacar"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 3 )
margin/left = 10.0
margin/top = 150.0
margin/right = 160.0
margin/bottom = 180.0
text = "Total Chutes:"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="texto_total_chutes" type="Label" parent="janelaPlacar"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 3 )
margin/left = 10.0
margin/top = 190.0
margin/right = 160.0
margin/bottom = 220.0
text = "Total:"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="l_numGols" type="Label" parent="janelaPlacar"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 3 )
margin/left = 165.0
margin/top = 70.0
margin/right = 215.0
margin/bottom = 100.0
text = "----"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="l_numDefensas" type="Label" parent="janelaPlacar"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 3 )
margin/left = 165.0
margin/top = 110.0
margin/right = 215.0
margin/bottom = 140.0
text = "----"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="l_numTotal" type="Label" parent="janelaPlacar"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 3 )
margin/left = 165.0
margin/top = 150.0
margin/right = 215.0
margin/bottom = 180.0
text = "----"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="l_numTotalChutes" type="Label" parent="janelaPlacar"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 3 )
margin/left = 165.0
margin/top = 190.0
margin/right = 215.0
margin/bottom = 220.0
text = "----"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


[editable path="goalKeeper"]
